[gd_scene load_steps=8 format=3 uid="uid://cjywjf0dbfxr1"]

[ext_resource type="Script" path="res://Script/AmeliorationBeryllium/AmeliorationBerylliumControl.gd" id="1_lypaw"]
[ext_resource type="PackedScene" uid="uid://cg8ujfkwr68r6" path="res://Design/Scenes/PresentationQuantiteesAtomes.tscn" id="1_mx5u0"]
[ext_resource type="SystemFont" uid="uid://d2tc25vdki2hk" path="res://Design/Themes/SystemFontForQantities.tres" id="2_2d7rk"]
[ext_resource type="Texture2D" uid="uid://62kvmyt8803l" path="res://Design/Icones/IconeFlecheBas24pxWhite.png" id="4_r60s2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qne0d"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st50f"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qv4r"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="AmeliorationBerylliumControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lypaw")

[node name="FondPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qne0d")

[node name="PresentationVBoxC" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMarginC" type="MarginContainer" parent="PresentationVBoxC"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/TopMarginC"]
layout_mode = 2

[node name="TopHBoxC" type="HBoxContainer" parent="PresentationVBoxC/TopMarginC/VBoxC"]
layout_mode = 2
size_flags_vertical = 0

[node name="GUIMarginC" parent="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC" instance=ExtResource("1_mx5u0")]
layout_mode = 2

[node name="GUIMarginC2" parent="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC" instance=ExtResource("1_mx5u0")]
layout_mode = 2

[node name="ButtonExit" type="Button" parent="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_2d7rk")
theme_override_font_sizes/font_size = 24
text = "Exit >"

[node name="TopHBoxC2" type="HBoxContainer" parent="PresentationVBoxC/TopMarginC/VBoxC"]
layout_mode = 2
size_flags_vertical = 0

[node name="GUIMarginC" parent="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC2" instance=ExtResource("1_mx5u0")]
layout_mode = 2

[node name="GUIMarginC2" parent="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC2" instance=ExtResource("1_mx5u0")]
layout_mode = 2

[node name="MiddleMarginC" type="MarginContainer" parent="PresentationVBoxC"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BaseBonusesMarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxC" type="HBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HydrogeneFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HydrogeneFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HydrogeneFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HydrogeneFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BONUSPROTON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HydrogeneFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeliumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HeliumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HeliumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HeliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BONUSPROTON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/HeliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LithiumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/LithiumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/LithiumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/LithiumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BONUSPROTON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/LithiumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BerylliumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/BerylliumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/BerylliumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/BerylliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "BONUSPROTON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/BaseBonusesMarginC/HBoxC/BerylliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconesFlechesMarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer"]
layout_mode = 2

[node name="HBoxC" type="HBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC"]
layout_mode = 2
alignment = 1

[node name="MarginC0" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC/MarginC0"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r60s2")
expand_mode = 1

[node name="MarginC1" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC/MarginC1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r60s2")
expand_mode = 1

[node name="MarginC2" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC/MarginC2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r60s2")
expand_mode = 1

[node name="MarginC3" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/IconesFlechesMarginC/HBoxC/MarginC3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r60s2")
expand_mode = 1

[node name="CurrentLevelsMarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxC" type="HBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HydrogeneFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HydrogeneFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HydrogeneFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HydrogeneFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalBonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HydrogeneFondPanel/MarginC/VBoxC"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeliumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HeliumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HeliumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HeliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalBonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/HeliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LithiumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/LithiumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/LithiumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/LithiumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalBonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/LithiumFondPanel/MarginC/VBoxC"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BerylliumFondPanel" type="Panel" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_st50f")

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/BerylliumFondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/BerylliumFondPanel/MarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/BerylliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalBonusLabel" type="Label" parent="PresentationVBoxC/MiddleMarginC/VBoxContainer/CurrentLevelsMarginC/HBoxC/BerylliumFondPanel/MarginC/VBoxC"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmeliorationsMarginC" type="MarginContainer" parent="PresentationVBoxC"]
layout_mode = 2
size_flags_vertical = 3

[node name="FondPanel" type="Panel" parent="PresentationVBoxC/AmeliorationsMarginC"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3qv4r")

[node name="AmeliorationsVBoxC" type="VBoxContainer" parent="PresentationVBoxC/AmeliorationsMarginC"]
layout_mode = 2

[node name="MarginC" type="MarginContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="FondPanel" type="Panel" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC"]
layout_mode = 2

[node name="PresVBoxC" type="VBoxContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomLabel" type="Label" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC"]
layout_mode = 2
text = "TITREBERYLLIUMMENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmeliorationsHBoxC" type="HBoxContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="NormalMarginC" type="MarginContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC/AmeliorationsHBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC/AmeliorationsHBoxC/NormalMarginC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BonusAddMarginC" type="MarginContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC/AmeliorationsHBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxC" type="VBoxContainer" parent="PresentationVBoxC/AmeliorationsMarginC/AmeliorationsVBoxC/MarginC/FondPanel/PresVBoxC/AmeliorationsHBoxC/BonusAddMarginC"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PresentationVBoxC/TopMarginC/VBoxC/TopHBoxC/ButtonExit" to="." method="_on_button_exit_pressed"]
